--- a/lesson_05/index.html
+++ b/lesson_05/index.html
@@ -25,8 +25,8 @@
           sem. Nulla consequat massa quis enim.
         </p>
         <div class="landing-buttons">
-          <a class="landing-button-1">Purchase UI Kit</a>
-          <a class="landing-button-2">Learn More</a>
+          <a href="#" class="landing-button-1">Purchase UI Kit</a>
+          <a href="#" class="landing-button-2">Learn More</a>
         </div>
       </div>
 
